# xlcpp

./: CMakeLists.txt  LICENCE  xlcpp-pimpl.h  xlcpp.cpp  xlcpp.h  xlcppConfig.cmake.in  xltest.cpp  xml-reader.cpp  xml-writer.cpp
.github/workflows/: build-linux.yml  build-windows.yml
src/: aes.cpp  aes.h  cfbf-test.cpp  cfbf.cpp  cfbf.h  mmap.cpp  mmap.h  sha1.cpp  sha1.h  utf16.h  xlcpp-pimpl.h  xlcpp.cpp  xlcpp.h  xlsb.cpp  xlsb.h  xltest.cpp  xml-reader.cpp  xml-writer.cpp
